<resources>
    <string name="label_applicationName">Android Sample</string>

    <string name="label_authentication">Autenticação do Usuário</string>
    <string name="label_begin">ENTRAR</string>
    <string name="message_enterSeuNome">Entre com seu nome</string>
    <string name="message_enterYourEmail">Entre com seu email</string>
    <string name="message_enterDataNascimento">Entre com sua data de nascimento</string>
    <string name="message_enterYourPassword">Entre com sua senha</string>
    <string name="message_enterSenhasNaoConferem">Senhas não conferem</string>
    <string name="message_errorNaoFoiPossivelCadastrar">Não foi possível cadastrar. Por favor tente novamente.</string>
    <string name="label_home">Home</string>
    <string name="message_yourPasswordLengthWrong">A senha deve ser maior que 4 digitos.</string>
    <string name="message_errorToAuthenticate">Não foi possível autenticar. Por favor tente novamente.</string>
    <string name="message_hello">Seja bem Vindo!</string>
    <string name="label_loading">Carregando...</string>
    <string name="message_loadingData">Aguarde o carregamento dos dados.</string>

    <string name="message_monitoringServiceStarted">Serviço de monitoramento iniciado.</string>
    <string name="message_monitoringServiceStoped">Serviço de monitormaneto desativado.</string>
    <string name="label_monitoringService">Serviço de Monitoramento</string>

    <!--/////////////////////////////////////////////////////////////////////////////////////////-->


    <string name="app_name">CPonto</string>
    <string name="label_inicial">Tela Inicial</string>
    <string name="logo">logo</string>
    <string name="login">Login</string>
    <string name="cadastrar_nova_conta">Cadastrar Nova Conta</string>
    <string name="e_mail">E-mail:</string>
    <string name="senha">Senha:</string>
    <string name="nome_completo">Nome Completo:</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_google">Google</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="action_sign_up_short">Cadastro</string>
    <string name="atualizar_login">Atualizar login</string>
    <string name="atualiza_profile">Atualizar profile</string>
    <string name="reset">Recuperar acesso</string>
    <string name="iniciar_rec_acesso">Iniciar recuperação acesso</string>
    <string name="confirmar_senha">Confirmar Senha:</string>
    <string name="dataNascimento">Data de Nascimento:</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="title_activity_maps_teste">MapsTesteActivity</string>
    <string name="title_activity_medicao">MedicaoActivity</string>


    <!--///////////////////////////////// Cadastro //////////////////////////////////////////////-->
    <string name="altura_usuario">Sua altura: </string>
    <string name="distancia">Distância: </string>
    <string name="altura">Altura: </string>
    <string name="altitude">Altitude:</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="cadastrar_ponto">Cadastrar Ponto</string>
    <string name="nome">Nome:</string>
    <string name="foto">Foto:</string>
    <string name="comentario">Comentario:</string>
    <string name="fotos">Fotos</string>
    <string name="comentarios">Comentarios</string>
    <string name="adicionar_comentario">Adicionar comentario</string>
    <string name="adicionar_foto">Adicionar foto</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="logoff">Logoff</string>
    <string name="conta_criada_sucesso">Conta criada com sucesso!</string>
    <string name="entre_nome">Entre com o Nome!</string>
    <string name="entre_email">Entre com o E-mail!</string>
    <string name="entre_data_nasc">Entre com a data de nascimento!</string>
    <string name="entre_senha">Entre com a senha!</string>
    <string name="entre_conf_senha">Entre com a confirmação da senha!</string>
    <string name="senha_nao_conf">Senhas não conferem!</string>
    <string name="ok">OK</string>
    <string name="gps_nao_responde">GPS do dispositivo não está respondendo!</string>
    <string name="inserir_altura_usuario">Favor inserir a sua altura!</string>
    <string name="calcular_distancia_altitude">Favor cálcular a distância e a altitude!</string>
    <string name="google_login_falhou">"Google login falhou, tente novamente!"</string>
    <string name="login_falhou">Login falhou!</string>
    <string name="recuperacao_acesso">Recuperação de acesso iniciada. Email enviado!</string>
    <string name="tente_novamente">Falhou! Tente novamente</string>
    <string name="atualizacao_realizada">Atualização realizada com sucesso.</string>
    <string name="atualizacao_falhou">Atualização falhou.</string>
    <string name="ponto_criado">Ponto criado com sucesso!</string>
    <string name="escrever_comentario">Favor escrever um comentário!</string>
    <string name="uuid">067e6162-3b6f-4ae2-a171-2470b63dff00</string>
    <string name="comentario_cancelado">Comentário cancelado!</string>
    <string name="comentario_cadastrado">Comentário cadastrado!</string>
    <string name="cad_novo_comentario">Cadastrar novo comentário!</string>
    <string name="confirmar_nova_foto">Confirmar a inclusão da nova Foto?</string>
    <string name="foto_cancelada">Inclusão de foto cancelada!</string>
    <string name="liberar_acesso_gps">Favor liberar acesso ao GPS do Dispositivo.</string>
    <string name="minha_localizacao">Minha Localizacao</string>
    <string name="novo_ponto">Novo Ponto</string>
    <string name="unidade_medida">m</string>
    <string name="ar">Realidade Aumentada</string>
    <string name="orientacoes_user_base">Após informar sua altura, aponte o alvo na base\n do objeto e dispare para calcular a distância!</string>
    <string name="orientacoes_user_topo">Aponte o alvo no topo do objeto \n e dispare para calcular a altura!</string>
    <string name="horizonte">Favor apontar o marcador central para a base do objeto!</string>
    <string name="nao_e_numero">Favor inserir apenas numeros para os valores desejados!</string>

</resources>
