<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="br.com.android.sample.view.cadastrar.MedicaoActivity">

    <FrameLayout
        android:id="@+id/camera"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_margin="@dimen/fab_margin"
            android:elevation="6dp"
            android:src="@mipmap/ic_camera_branco"
            app:backgroundTint="@color/colorPrimaryDark"
            android:onClick="onCalcularClick"/>

        <include layout="@layout/content_medicao" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/cadastrar_ponto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_margin="@dimen/fab_margin"
            android:elevation="6dp"
            android:src="@mipmap/marcador_mais_branco"
            app:backgroundTint="@color/colorPrimaryDark"
            android:onClick="onCadPontoClick"/>

    </FrameLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/marcadorCentral"
        android:layout_gravity="center"
        android:src="@mipmap/marcacao_centro_camera"
        android:background="@android:color/transparent"/>


    <LinearLayout
        android:id="@+id/valores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="onInserirValoresManualmenteClick">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura_usuario"
            android:id="@+id/altura_usuario"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distancia"
            android:id="@+id/distancia"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altitude"
            android:id="@+id/altura"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:id="@+id/latitude"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:id="@+id/longitude"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
