<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="br.com.android.sample.view.cadastrar.VisualizaPontoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fotos"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/branco"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addFoto"
        android:text="@string/adicionar_foto"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/branco"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="onAddFotoClick"/>

    <ImageSwitcher
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imagemSwitcher"
        android:paddingBottom="5dp"></ImageSwitcher>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Gallery
            android:layout_width="match_parent"
            android:layout_height="80dip"
            android:id="@+id/gallery" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarFoto"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignRight="@+id/gallery"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comentarios"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/branco"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_comentario"
            android:id="@+id/addComentario"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/branco"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="onAddComentarioClick"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarComentario"
            android:layout_gravity="center_horizontal" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_gravity="center_horizontal"
        android:choiceMode="singleChoice"
        android:background="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>
